# internal/dto/post_data.go
@@ -1,0 +1,7 @@
+package dto
+
+type CreatePostRequestBody struct {
+	Title   string `json:"title"   validate:"required"`
+	Content string `json:"content" validate:"required"`
+	Author  string `json:"author"  validate:"required"`
+}
